--- a/project/Olook/app/src/main/res/layout/activity_maps.xml
+++ b/project/Olook/app/src/main/res/layout/activity_maps.xml
@@ -1,127 +1,25 @@
-<android.support.v4.widget.DrawerLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-android:id="@+id/drawerLayout"
-android:layout_width="match_parent"
-android:layout_height="match_parent">
-
-<!-- The main content view -->
-<RelativeLayout
-    android:id="@+id/mainContent"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MapsActivity" >
+    android:fitsSystemWindows="true"
+    tools:openDrawer="start">
 
-    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:map="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <include
+        layout="@layout/app_bar_main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context="com.evalwithin.olook.MapsActivity"
-        tools:layout="@layout/activity_maps" />
+        android:layout_height="match_parent" />
 
-    <TextView
-        android:id="@+id/latlongLocation"
+    <android.support.design.widget.NavigationView
+        android:id="@+id/nav_view"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignRight="@+id/searchView1"
-        android:background="#ff058fff"
-        android:gravity="bottom"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:paddingTop="5dp"
-        android:textColor="#ffffffff" />
-
-    <EditText
-        android:id="@+id/searchView1"
-        android:layout_width="250dp"
-        android:layout_height="34dp"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="18dp"
-        android:layout_marginTop="14dp"
-        android:hint="Search Location"
-        android:textColor="@android:color/black"
-        android:background="@android:color/white" >
-    </EditText>
-
-    <Button
-        android:id="@+id/button1"
-        android:layout_width="28dp"
-        android:layout_height="25dp"
-        android:layout_alignBaseline="@+id/searchView1"
-        android:layout_alignBottom="@+id/searchView1"
-        android:layout_alignRight="@+id/searchView1"
-        />
-
-</RelativeLayout>
-
-<!-- The navigation drawer -->
-<RelativeLayout
-    android:layout_width="200dp"
-    android:layout_height="match_parent"
-    android:id="@+id/drawerPane"
-    android:layout_gravity="start">
-
-    <!-- Profile Box -->
-    <RelativeLayout
-        android:id="@+id/profileBox"
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:background="@color/material_blue_grey_800"
-        android:padding="8dp" >
-
-        <ImageView
-            android:id="@+id/avatar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:src="@mipmap/ic_launcher"
-            android:layout_marginTop="15dp" />
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="42dp"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="15dp"
-            android:layout_toRightOf="@+id/avatar"
-            android:orientation="vertical" >
-
-            <TextView
-                android:id="@+id/userName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Rishabh"
-                android:textColor="#fff"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-            <TextView
-                android:id="@+id/desc"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_marginTop="4dp"
-                android:text="View Profile"
-                android:textColor="#fff"
-                android:textSize="12sp" />
-        </LinearLayout>
-    </RelativeLayout>
-
-    <!-- List of Actions (pages) -->
-    <ListView
-        android:id="@+id/navList"
-        android:layout_width="200dp"
         android:layout_height="match_parent"
-        android:layout_below="@+id/profileBox"
-        android:choiceMode="singleChoice"
-        android:background="#ffffffff" />
-
-</RelativeLayout>
+        android:layout_gravity="start"
+        android:fitsSystemWindows="true"
+        app:headerLayout="@layout/nav_header_main"
+        app:menu="@menu/activity_main_drawer" />
 
 </android.support.v4.widget.DrawerLayout>
