--- a/project/Olook/app/src/main/res/layout/nav_header_main.xml
+++ b/project/Olook/app/src/main/res/layout/nav_header_main.xml
@@ -11,19 +11,21 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <ImageView
+    <!--<ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@android:drawable/sym_def_app_icon" />
+        android:src="@android:drawable/sym_def_app_icon" />-->
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:text="OLook"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+        android:text="@string/app_name"
+        android:textAlignment="center"
+        android:textSize="40dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
     <!--<TextView
         android:id="@+id/textView"
