--- a/project/Olook/app/src/main/res/layout/activity_maps.xml
+++ b/project/Olook/app/src/main/res/layout/activity_maps.xml
@@ -13,8 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <!--android.support.design.widget.NavigationView-->
-    <com.evalwithin.olook.RadiusNavigationView
+    <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="180dp"
         android:layout_height="match_parent"
