--- a/project/Olook/app/src/main/res/layout/content_main.xml
+++ b/project/Olook/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -17,4 +17,12 @@
         android:layout_height="match_parent"
         tools:context="com.evalwithin.olook.MapsActivity"
         tools:layout="@layout/activity_maps" />
-</RelativeLayout>
+    <view
+        class="com.evalwithin.olook.Compass"
+        android:id="@+id/compass"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="20dp"
+        />
+</FrameLayout>
