--- a/project/Olook/app/src/main/res/drawable-xhdpi/side_nav_bar.xml
+++ b/project/Olook/app/src/main/res/drawable-xhdpi/side_nav_bar.xml
@@ -2,7 +2,8 @@
     android:shape="rectangle">
     <gradient
         android:angle="135"
-        android:endColor="?attr/colorPrimaryDark"
-        android:startColor="?attr/colorPrimary"
+        android:centerColor="#4CAF50"
+        android:endColor="#2E7D32"
+        android:startColor="#81C784"
         android:type="linear" />
 </shape>
