--- a/project/Olook/app/src/main/res/layout/app_bar_main.xml
+++ b/project/Olook/app/src/main/res/layout/app_bar_main.xml
@@ -34,14 +34,14 @@
         >
 
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
             android:padding="16dp"
             android:textSize="16sp"
             android:id="@+id/bottom_sheet_title"/>
         <TextView
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Description"
             android:padding="16dp"
