--- a/project/Olook/app/src/main/res/layout/app_bar_main.xml
+++ b/project/Olook/app/src/main/res/layout/app_bar_main.xml
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="150dp"
         android:clipToPadding="true"
-        android:background="@android:color/white"
+        android:background="@android:color/darker_gray"
         android:orientation="vertical"
         app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
         >
@@ -37,15 +37,18 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:padding="16dp"
-            android:textSize="16sp"
+            android:padding="5dp"
+            android:textSize="20sp"
+            android:background="@color/colorPrimary"
             android:id="@+id/bottom_sheet_title"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Description"
-            android:padding="16dp"
+            android:paddingTop="10dp"
+            android:paddingBottom="10dp"
             android:textSize="16sp"
+            android:background="@android:color/white"
             android:id="@+id/bottom_sheet_description"/>
 
     </LinearLayout>
