--- a/project/Olook/app/src/main/res/menu/activity_main_drawer.xml
+++ b/project/Olook/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,15 +5,15 @@
         <item
             android:id="@+id/nav_camera"
             android:icon="@drawable/ic_menu_camera"
-            android:title="Camera" />
+            android:title="@string/camera" />
         <item
             android:id="@+id/nav_manage"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="@string/properties" />
         <item
             android:id="@+id/nav_share"
             android:icon="@drawable/ic_menu_share"
-            android:title="Share" />
+            android:title="@string/social_media" />
 
     </group>
 
