--- a/project/Olook/app/src/main/res/layout/app_bar_main.xml
+++ b/project/Olook/app/src/main/res/layout/app_bar_main.xml
@@ -26,30 +26,34 @@
     <LinearLayout
         android:id="@+id/bottom_sheet"
         android:layout_width="match_parent"
-        android:layout_height="150dp"
+        android:layout_height="250dp"
         android:clipToPadding="true"
-        android:background="@android:color/darker_gray"
+        android:background="@android:color/transparent"
         android:orientation="vertical"
-        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
-        >
+        android:layout_margin="0dp"
+        app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Title"
-            android:padding="5dp"
-            android:textSize="20sp"
+            android:padding="10dp"
             android:background="@color/colorPrimary"
-            android:id="@+id/bottom_sheet_title"/>
+            android:id="@+id/bottom_sheet_title"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark"
+            android:textSize="25dp"
+            android:clickable="true"
+            android:onClick="closeInformationsBar" />
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:text="Description"
-            android:paddingTop="10dp"
-            android:paddingBottom="10dp"
+            android:padding="10dp"
             android:textSize="16sp"
             android:background="@android:color/white"
-            android:id="@+id/bottom_sheet_description"/>
+            android:id="@+id/bottom_sheet_description"
+            android:textColorLink="@android:color/black"
+            android:clickable="true" />
 
     </LinearLayout>
 
