--- a/project/Olook/app/src/main/res/layout/nav_header_main.xml
+++ b/project/Olook/app/src/main/res/layout/nav_header_main.xml
@@ -2,29 +2,30 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="@dimen/nav_header_height"
-    android:background="@drawable/side_nav_bar"
+    android:background="@color/colorPrimary"
     android:gravity="bottom"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
-    <!--<ImageView
-        android:id="@+id/imageView"
+    <ImageView
+        android:id="@+id/menu_appLogo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
-        android:src="@android:drawable/sym_def_app_icon" />-->
+        android:paddingTop="25sp"
+        android:src="@drawable/logo_with_shadow" />
 
     <TextView
+        android:id="@+id/menu_appName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/app_name"
         android:textAlignment="center"
-        android:textSize="40dp"
+        android:textSize="30sp"
         android:textAppearance="@style/TextAppearance.AppCompat.Title" />
 
     <!--<TextView
