--- a/project/Olook/app/src/main/res/values/colors.xml
+++ b/project/Olook/app/src/main/res/values/colors.xml
@@ -3,5 +3,5 @@
     <color name="colorPrimaryLight">#119e5d</color>
     <color name="colorPrimary">#057434</color>
     <color name="colorPrimaryDark">#034e23</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#119e5d</color>
 </resources>
